Revert "9. Изменить программу Tracker из 2-го модуля"
This reverts commit 6fe804ea943426b6e0228be01f6ea7114ffa2c2c.